[gd_scene load_steps=4 format=3 uid="uid://bjslpdnlti2ic"]

[ext_resource type="Script" path="res://scripts/split_screen/viewports.gd" id="1_g5i4m"]
[ext_resource type="Script" path="res://scripts/split_screen/camera.gd" id="2_o6uc2"]
[ext_resource type="PackedScene" uid="uid://ndmu4y4a5qri" path="res://scenes/maps/space_station.tscn" id="3_j2ihs"]

[node name="StaticSplitScreen" type="Node2D"]

[node name="Viewports" type="HBoxContainer" parent="."]
offset_right = 4.0
alignment = 1
script = ExtResource("1_g5i4m")

[node name="ViewportContainer1" type="SubViewportContainer" parent="Viewports"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="SubViewport" parent="Viewports/ViewportContainer1"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
zoom = Vector2(2, 2)
script = ExtResource("2_o6uc2")

[node name="Stage" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource("3_j2ihs")]

[node name="ViewportContainer2" type="SubViewportContainer" parent="Viewports"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="SubViewport" parent="Viewports/ViewportContainer2"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
zoom = Vector2(2, 2)
script = ExtResource("2_o6uc2")
